// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileIncrement > empty criteria > produces UPDATE without WHERE clause when criteria is empty {} 1`] = `
{
  "params": [
    5,
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1",
}
`;

exports[`compileIncrement > namespace override > unqualified table name when both metadata.namespace is null and no override 1`] = `
{
  "params": [
    1,
    "x-1",
  ],
  "text": "UPDATE "counters" AS "t0" SET "hits" = "t0"."hits" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement > namespace override > uses explicit namespace when metadata.namespace is null 1`] = `
{
  "params": [
    1,
    "x-1",
  ],
  "text": "UPDATE "public"."counters" AS "t0" SET "hits" = "t0"."hits" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement > should compile decrement with negative value 1`] = `
{
  "params": [
    -3,
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement > should compile increment with positive value 1`] = `
{
  "params": [
    5,
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement > system filter applied > includes soft-delete IS NULL condition when entity has DeleteDate field 1`] = `
{
  "params": [
    1,
    "post-1",
  ],
  "text": "UPDATE "app"."posts" AS "t0" SET "views" = "t0"."views" + $1 WHERE "t0"."id" = $2 AND "t0"."deleted_at" IS NULL",
}
`;

exports[`compileIncrement > zero value > value: 0 compiles to + $1 with params[0] = 0 1`] = `
{
  "params": [
    0,
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement empty criteria produces UPDATE without WHERE clause when criteria is empty {} 1`] = `
{
  "params": [
    5,
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1",
}
`;

exports[`compileIncrement namespace override unqualified table name when both metadata.namespace is null and no override 1`] = `
{
  "params": [
    1,
    "x-1",
  ],
  "text": "UPDATE "counters" AS "t0" SET "hits" = "t0"."hits" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement namespace override uses explicit namespace when metadata.namespace is null 1`] = `
{
  "params": [
    1,
    "x-1",
  ],
  "text": "UPDATE "public"."counters" AS "t0" SET "hits" = "t0"."hits" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement should compile decrement with negative value 1`] = `
{
  "params": [
    -3,
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement should compile increment with positive value 1`] = `
{
  "params": [
    5,
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1 WHERE "t0"."id" = $2",
}
`;

exports[`compileIncrement system filter applied includes soft-delete IS NULL condition when entity has DeleteDate field 1`] = `
{
  "params": [
    1,
    "post-1",
  ],
  "text": "UPDATE "app"."posts" AS "t0" SET "views" = "t0"."views" + $1 WHERE "t0"."id" = $2 AND "t0"."deleted_at" IS NULL",
}
`;

exports[`compileIncrement zero value value: 0 compiles to + $1 with params[0] = 0 1`] = `
{
  "params": [
    0,
    "abc-123",
  ],
  "text": "UPDATE "app"."users" AS "t0" SET "score" = "t0"."score" + $1 WHERE "t0"."id" = $2",
}
`;
